// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.schema;

import "schema/package.proto";
import "schema/volume.proto";

option go_package = "namespacelabs.dev/foundation/schema";

message SecretSpec {
    reserved 1, 4;

    string       name        = 2;
    string       description = 3;
    GenerateSpec generate    = 5;

    message GenerateSpec {
        string unique_id         = 1;  // If not set, will default to a value derived from the secret reference.
        int32  random_byte_count = 2;
        Format format            = 3;

        enum Format {
            FORMAT_UNKNOWN = 0;  // Defaults to base64.
            FORMAT_BASE64  = 1;
            FORMAT_BASE32  = 2;
        }
    }
}

message SecretResult {
    PackageRef   ref   = 1;
    SecretSpec   spec  = 2;
    FileContents value = 3;
}
